# Simple-Buffer-Analyzer

./: .gitignore  Bitstream.cpp  Buffer.cpp  BufferSystem.drawio  CMakeLists.LOCAL.txt  CMakeLists.txt  Definitions.hpp  Frame.cpp  README.md  auto_buffer_size-linux_amd64  auto_buffer_size.cpp  converter_Terses.py  converter_Verbose.py  cp-numpy-core.py  help.info  help_auto.txt  main  main.cpp  manual_buffer_size-linux_amd64  manual_buffer_size.cpp  save_csv_data.py
.github/workflows/: build-and-pre-release.yml  build-and-tag-release.yml
.run/: auto_buffer_size.run.xml  manual_buffer_size.run.xml
include/: Analyzer.cpp  Analyzer.hpp  Bitstream.cpp  Bitstream.hpp  Buffer.cpp  Buffer.hpp  Definitions.cpp  Definitions.hpp  Frame.cpp  Frame.hpp  matplotlibcpp.h
include/tclap/: TCLAPConfig.h
video_traces/: Terse_DieFirma_H261_256kbps.info  Terse_DieFirma_H261_256kbps.txt  Terse_DieFirma_H261_256kbps_medium.txt  Terse_DieFirma_H261_256kbps_small.txt  Terse_DieFirma_H261_64kbps.info  Terse_DieFirma_H261_64kbps.txt  Terse_DieFirma_H261_64kbps_medium.txt  Terse_DieFirma_H261_64kbps_small.txt  Terse_DieHardIII_H261_256kbps.info  Terse_DieHardIII_H261_256kbps_medium.txt  Terse_DieHardIII_H261_256kbps_small.txt  Verbose_DieHardIII_H261_256kbps.info  Verbose_DieHardIII_H261_256kbps.txt  Verbose_DieHardIII_H261_64kbps.info  Verbose_DieHardIII_H261_64kbps.txt  Verbose_DieHardIII_H261_64kbps_medium.txt  Verbose_DieHardIII_H261_64kbps_small.txt  Verbose_Jurassic_H263_256kbps.info  Verbose_Jurassic_H263_256kbps.txt  Verbose_Jurassic_H263_256kbps_medium.txt  Verbose_Jurassic_H263_256kbps_small.txt  VideoTrace-Stream-1.txt  VideoTrace-Stream-2.txt  VideoTrace-Stream-3.txt  VideoTrace-Stream-4.txt  VideoTrace-Stream-5.txt
